some sort of java version tomfoolery here too i guess